
# (r1076)
 * misc fixes of minor things causing compile warnings
# (r1075)
 * fix: was likely using uninitialized data in Image()
# (r1074)
 * fix: a few more checks when reading PCX files
# (r1073)
 * bugfix: a function in AADevice (fim_aa_get_input) was missing return value
# (r1071,r1072)
 * documented the %k expando for _info_fmt_str and bugfix (avoiding data corruption when handling %k)
# (r1068)
 * "limit '~i' MINIDX[-MAXIDX]", with MINIDX and MAXIDX numbers (eventually with K as x 1000 multiplier) will restrict to filenames in positions between those.
# (r1070)
 * "limit '~d'", will limit to files having exact current file's modify date +- one day.
# (r1067)
 * "limit '~z'", with, will limit to files having same file size as the current.
 * "limit '~z' MINSIZE[-MAXSIZE]", with MINSIZE and MAXSIZE numbers with eventually K (x 1024) or M (x 1024 1024) multipliers, will limit according to file size.
 * "limit '~d' MINTIME[-MAXTIME]", with MINTIME and MAXTIME numbers, will limit according to file modify date (expressed as seconds since the epoch, see 'man 2 time').
# (r1069)
 * "limit '~d' MINDATE[-MINDATE]", with MINDATE and MAXDATE dates as in DD/MM/YYYY, and after 1900.
# (r1065)
 * "limit '-further' ..." will make 'limit' act on the current list, rather than on the full anew. 
# (r1063)
 * Command "list 'mark' {args}" accepts now exactly what "limit {args}" does.
# (r1059)
 * Doc fix: stating that --sanity-check terminates the program, rather than continuing.
# (r1056,r1062)
 * New criteria for the "limit" command:
   If invoked with '~!' will restrict to files with unique basename.
   If with '~=', to files with duplicate basename;
   if with '~^', to the first of the files with duplicate basename;
   if with '~$', to the last of the files with duplicate basename. 
# (r1053)
 * Added variable _all_file_loaders: space-separated list of hardcoded file loaders usable with _file_loader.
# (r1051,r1052)