@@ -408,7 +408,15 @@ ret:		return key;
 		addCommand(new Command(fim::string(FIM_FLT_IF),fim::string("if(expression){action;}['else'{action;}] : see if"),this,&CommandConsole::fcmd_foo));// FIXME: need a special "help grammar" command !
 		addCommand(new Command(fim::string(FIM_FLT_INFO),fim::string(FIM_FLT_INFO" : display information about the current file" ),&browser_,&Browser::fcmd_info));
 #if FIM_WANT_PIC_LBFL
-		addCommand(new Command(fim::string(FIM_FLT_LIMIT),fim::string(FIM_FLT_LIMIT " ['-further'] [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the \'mutt\' program). Uses information loaded via --" FIM_OSW_LOAD_IMG_DSC_FILE ". "
+		addCommand(new Command(fim::string(FIM_FLT_LIMIT),fim::string(FIM_FLT_LIMIT " "
+#if FIM_WANT_PIC_LVDN
+		" {'-list'|'-listall'}|{'-list'|'-listall'} 'variable'|"
+#endif /* FIM_WANT_PIC_LVDN */
+		"['-further'] [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the \'mutt\' program). Uses information loaded via --" FIM_OSW_LOAD_IMG_DSC_FILE ". "
+#if FIM_WANT_PIC_LVDN
+		" If invoked with '-list'/'-listall' only, will list the current description variable ids. "
+		" If invoked with '-list'/'-listall' 'id', will list set values for the variable 'id'. "
+#endif /* FIM_WANT_PIC_LVDN */
 		" If '-further' is present, will start with the current list; if not, with the full list. "
 		" If {variable} and {values} are provided, limit to files having property {variable} set to {value}. "
 #if FIM_WANT_FILENAME_MARK_AND_DUMP
