@@ -13,6 +13,9 @@
  * bugfix: a function in AADevice (fim_aa_get_input) was missing return value
 # (r1071,r1072)
  * documented the %k expando for _info_fmt_str and bugfix (avoiding data corruption when handling %k)
+# (r1077)
+ * limit '-list'      will list existing variables identifiers as set via 'desc'
+ * limit '-list' 'id' will list existing values for instances of variable 'id' as set via 'desc'
 # (r1068)
  * "limit '~i' MINIDX[-MAXIDX]", with MINIDX and MAXIDX numbers (eventually with K as x 1000 multiplier) will restrict to filenames in positions between those.
 # (r1070)
